<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mbracelet"
            android:icon="@drawable/ic_mbracelet"
            android:title="@string/navigation_mbracelet" />
        <item
            android:id="@+id/nav_rbracelet"
            android:icon="@drawable/ic_rbracelet"
            android:title="@string/navigation_rbracelets" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_messages"
            android:title="@string/navigation_messages" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/navigation_about" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/navigation_help"/>
    </group>

</menu>
