<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="3"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/heart_rate_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/hrate"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:text="@string/heart_rate_title"/>

        <TextView
            android:id="@+id/sports_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/sports"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/sports_title"/>

        <TextView
            android:id="@+id/sleep_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/sleep"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/sleep_title"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="3"
        android:gravity="center_vertical"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/location_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/location"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/location_title"/>

        <TextView
            android:id="@+id/warning_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/warnings"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/warning_title"/>

        <TextView
            android:id="@+id/fence_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/fence"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/fence_title"/>

    </TableRow>

</TableLayout>