<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/bottom_navigation_rg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/beige">

        <RadioButton
            android:id="@+id/null_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <RadioButton
            android:id="@+id/home_rb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:button="@null"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableTop="@drawable/home"
            android:text="@string/label_home"/>

        <RadioButton
            android:id="@+id/messages_rb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:button="@null"
            android:layout_weight="1"
            android:drawableTop="@drawable/messages"
            android:text="@string/label_messages"
            android:gravity="center"/>

        <RadioButton
            android:id="@+id/settings_rb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:button="@null"
            android:layout_weight="1"
            android:drawableTop="@drawable/settings"
            android:text="@string/label_settings"
            android:gravity="center"/>

        <RadioButton
            android:id="@+id/statistics_rb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:button="@null"
            android:layout_weight="1"
            android:drawableTop="@drawable/statistics"
            android:text="@string/label_statistics"
            android:gravity="center"/>

    </RadioGroup>

</FrameLayout>
