<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/date_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">
        <TextView
            android:id="@+id/date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"/>
        <TextView
            android:id="@+id/weekday_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_toRightOf="@id/date_ll"
        android:layout_centerVertical="true"
        android:minHeight="100dp"
        android:weightSum="3">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/walk_steps_label"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"/>
            <TextView
                android:id="@+id/walk_steps_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_unit"
                android:gravity="center"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

        <include layout="@layout/divide_line_view_vertical"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/run_steps_label"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"/>
            <TextView
                android:id="@+id/run_steps_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_unit"
                android:gravity="center"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <include layout="@layout/divide_line_view_vertical"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calorie_label"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"/>
            <TextView
                android:id="@+id/calories_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calorie_unit"
                android:gravity="center"
                android:layout_centerInParent="true"/>

        </RelativeLayout>
        <include layout="@layout/divide_line_view_vertical"/>
    </LinearLayout>

</RelativeLayout>
